objects/WhiteSpace__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WhiteSpace</relationshipLabel>
        <relationshipName>WhiteSpace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GroupIDstring__c</fullName>
        <formula>Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupIDstring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <formula>Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupSort__c</fullName>
        <formula>Group__r.SortOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupSort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>WhiteSpace</relationshipLabel>
        <relationshipName>WhiteSpace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LostOppURL__c</fullName>
        <label>LostOppURL</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LostRowId__c</fullName>
        <label>LostRowId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LostTotal__c</fullName>
        <label>LostTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Additional_Notes__c</fullName>
        <label>Lost Reason Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail__c</fullName>
        <label>Lost Reason Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppQuantity__c</fullName>
        <label>OppQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppTotal__c</fullName>
        <label>OppTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubQuantity__c</fullName>
        <label>SubQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasLost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasLost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>showHasLost__c</fullName>
        <formula>if (  hasLost__c, &quot;✓&quot;, &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>showHasLost</label>
        <type>Text</type>
    </fields>
    <label>WS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Group__c</columns>
        <columns>OppTotal__c</columns>
        <columns>SubQuantity__c</columns>
        <columns>SubTotal__c</columns>
        <columns>GroupIDstring__c</columns>
        <columns>GroupSort__c</columns>
        <columns>AccountID__c</columns>
        <columns>hasLost__c</columns>
        <columns>showHasLost__c</columns>
        <columns>Test__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WS-{0000}</displayFormat>
        <label>WS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>